ms-product/src/main/java/com/example/msproduct/error/ErrorCodes.java
package com.example.msproduct.error;

public enum ErrorCodes {

    PRODUCT_NOT_FOUND,
    PRODUCT_EXISTS,
    PRODUCT_HAS_EMPTY_STOCK,
    UNEXPECTED_ERROR
}
